--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,11 +4,35 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
-.link{
-    color: #000000;
+html, body { 
+    background: url("/images/background.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: #ffffff;
 }
 
-.active{
+.section-title {
+    text-align: center;
+}
+
+.delimiter {
+    width: 700px;
+	margin: 0 auto;
+	padding-bottom: 30px;
+	border-top: 1px solid #fff;
+	border-top: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+.description {
+    text-align: left;
+}
+
+.link {
+    color: #ffffff;
+}
+.active {
     font-weight: bold;
 }
 
@@ -20,4 +44,14 @@
 
 .flex-row {
     justify-content: center;
+}
+
+.grow:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
+.active-content {
+    display: none;
 }
