Create user schema, context and test
This commit includes User context, schema and tests.
In addition, refactorices templates to show owner information.

--- a/lib/pacvex_web/templates/layout/app.html.eex
+++ b/lib/pacvex_web/templates/layout/app.html.eex
@@ -4,41 +4,41 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Pablo PG</title>
+    <title><%= @owner.name %></title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <div class="container">
       <br>
       <ul class="nav justify-content-end">
-	<li class="nav-item">
-	  <a class="nav-link active link" href="<%= Routes.page_path(@conn, :index) %>">Home</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link disabled" href="#" aria-disabled="true">Skills</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link disabled" href="#" aria-disabled="true">Education</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link disabled" href="#" aria-disabled="true">Experience</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link disabled" href="#" aria-disabled="true">Work</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link disabled" href="#" aria-disabled="true">Blog</a>
-	</li>
-	<li class="nav-item">
-	  <a class="nav-link link" href="<%= Routes.page_path(@conn, :contact) %>">Contact</a>
-	</li>
+        <li class="nav-item">
+          <a class="nav-link active link" href="<%= Routes.page_path(@conn, :index) %>">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" aria-disabled="true">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" aria-disabled="true">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" aria-disabled="true">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" aria-disabled="true">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" aria-disabled="true">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link link" href="<%= Routes.page_path(@conn, :contact) %>">Contact</a>
+        </li>
       </ul>
       <div class="row"></div>
       <%= render @view_module, @view_template, assigns %>
     </div>
     <footer id="footer" class="page-footer font-small cyan darken-3 active-content">
       <div class="footer-copyright text-center py-3">© 2019 Copyright:
-	<a><b>Pablo Palomino Gómez</b></a>
+        <a><b>Pablo Palomino Gómez</b></a>
       </div>
     </footer>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
