--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,12 +4,12 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
-html, body { 
-    background: url("/images/background.jpg") no-repeat center center fixed; 
+html, body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-color: #1E1E1E;
     color: #ffffff;
 }
 
@@ -17,16 +17,18 @@ html, body {
     text-align: center;
 }
 
+
 .delimiter {
-    width: 700px;
-	margin: 0 auto;
-	padding-bottom: 30px;
-	border-top: 1px solid #fff;
-	border-top: 1px solid rgba(255, 255, 255, 0.6);
+    width: 100% ;
+    margin: auto;
+    padding-bottom: 30px;
+    border-top: 1px solid #fff;
+    border-top: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 .description {
-    text-align: left;
+    text-align: center;
+    font-size: x-small;
 }
 
 .link {
@@ -37,9 +39,17 @@ html, body {
 }
 
 .avatar {
-  vertical-align: middle;
-  width: 100px;
-  height: 100px;
+    vertical-align: middle;
+    width: 100px;
+    height: 100px;
+}
+
+.name {
+    font-size: medium;
+}
+
+.position {
+    font-size: x-small;
 }
 
 .flex-row {
