--- a/lib/pacvex_web/templates/page/contact.html.eex
+++ b/lib/pacvex_web/templates/page/contact.html.eex
@@ -1,23 +1,17 @@
-<!--Section: Contact v.2-->
-<section class="mb-4">
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact</h2>
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any question for me?</p>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <ul class="list-unstyled mb-0">
-          <li><a class="link fa fa-map-marker fa-4x" aria-hidden="true"
-		 href="https://goo.gl/maps/witqUgMrtG3BJh1N9" target="_blank"></a>
-            <p>Consuegra, Toledo</p>
-          </li>
-	  <br>
-          <li><i class="fa fa-phone fa-4x"></i>
-            <p>+34 689 659 305</p>
-          </li>
-	  <br>
-          <li><a class="link fa fa-envelope fa-4x" href="mailto:pablopalomino96@gmail.com"></a>
-            <p>pablopalomino96@gmail.com</p>
-          </li>
-        </ul>
-        </div>
+<div id="active-content" class="text-center active-content">
+  <h2 class="h1-responsive font-weight-bold text-center my-4">Contact</h2>
+  <p class="text-center description w-responsive mx-auto mb-5">Do you have any question for me?</p>
+  <div class="row">
+    <div id='inner-content' class="col-md-12 text-center active-content">
+      <a class="link fa fa-map-marker fa-4x" aria-hidden="true"
+		  href="<%= @owner.location_url %>" target="_blank"></a>
+      <p><%= @owner.location %></p>
+      <br>
+      <i class="fa fa-phone fa-4x"></i>
+      <p><%= @owner.phone %></p>
+      <br>
+      <a class="link fa fa-envelope fa-4x" href="mailto:<%= @owner.email %>" ></a>
+      <p><%= @owner.email %></p>
     </div>
-</section>
+  </div>
+</div>
