Update README.md with more info

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -39,6 +39,12 @@ html, body {
 .link {
     color: #ffffff;
 }
+
+a:hover {
+    color: gray;
+    text-decoration: none;
+}
+
 .active {
     font-weight: bold;
 }
