Add favicon and custom page title

--- a/lib/pacvex_web/templates/layout/app.html.eex
+++ b/lib/pacvex_web/templates/layout/app.html.eex
@@ -4,8 +4,13 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%= @owner.name %></title>
+    <title><%= format_page_title(@owner.name) %></title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= Routes.static_path(@conn, "/images/apple-touch-icon.png") %>">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= Routes.static_path(@conn, "/images/favicon-32x32.png") %>">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= Routes.static_path(@conn, "/images/favicon-16x16.png") %>">
+    <link rel="manifest" href="/manifest.json">
+
   </head>
   <body>
     <div class="container">
